force-app/main/default/objects/OdooIntegrationSettings__c/OdooIntegrationSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Odoo Integration Settings</label>
</CustomObject>