force-app/main/default/objects/OdooIntegrationSettings__c/fields/Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Base_URL__c</fullName>
    <description>Odoo base URL for this environment (e.g. https://dev-staging.digitaledgedc.dev). Must match a Remote Site Setting.</description>
    <label>Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>