force-app/main/default/objects/OdooIntegrationSettings__c/fields/Credentials__c.field-meta.xml
<CustomField>
    <fullName>Credentials__c</fullName>
    <description>Base64-encoded Basic Auth credentials (username:password). Used by OdooCalloutService to set Authorization header.</description>
    <label>Credentials (Base64)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>