force-app/main/default/objects/OdooIntegrationSettings__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <defaultValue>&quot;Sandbox&quot;</defaultValue>
    <label>Environment</label>
    <length>10</length>
    <type>Text</type>
</CustomField>