force-app/main/default/objects/OdooIntegrationSettings__c/fields/IP1_Enabled__c.field-meta.xml
<CustomField>
    <fullName>IP1_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IP-1 Enabled</label>
    <type>Checkbox</type>
</CustomField>