force-app/main/default/objects/OdooIntegrationSettings__c/fields/IP2_Enabled__c.field-meta.xml
<CustomField>
    <fullName>IP2_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IP-2 Enabled</label>
    <type>Checkbox</type>
</CustomField>