force-app/main/default/objects/OdooIntegrationSettings__c/fields/IP2_Last_Sync__c.field-meta.xml
<CustomField>
    <fullName>IP2_Last_Sync__c</fullName>
    <label>IP-2 Last Sync Timestamp</label>
    <type>DateTime</type>
</CustomField>