force-app/main/default/objects/OdooIntegrationSettings__c/fields/IP2_Sync_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>IP2_Sync_Batch_Size__c</fullName>
    <defaultValue>1</defaultValue>
    <label>IP-2 Sync Batch Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>