force-app/main/default/objects/OdooIntegrationSettings__c/fields/Max_Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>Max_Retry_Count__c</fullName>
    <defaultValue>3</defaultValue>
    <label>Max Retry Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>