force-app/main/default/objects/OdooIntegrationSettings__c/fields/Retry_Interval_Min__c.field-meta.xml
<CustomField>
    <fullName>Retry_Interval_Min__c</fullName>
    <defaultValue>30</defaultValue>
    <label>Retry Interval (Minutes)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>