force-app/main/default/objects/OdooIntegrationSettings__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <label>Odoo Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>